syntax = "proto3";

package configure_business;
option go_package = "./v1;v1";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "configure_business.proto";


service Service {
  rpc PageBusiness (PageBusinessRequest) returns (PageBusinessReply) {
    option (google.api.http) = {
      get: "/configure/v1/business"
    };
  }

  rpc AddBusiness (AddBusinessRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/configure/v1/business",
      body:"*"
    };
  }

  rpc UpdateBusiness (UpdateBusinessRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/configure/v1/business",
      body:"*"
    };
  }

  rpc DeleteBusiness (DeleteBusinessRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/configure/v1/business"
    };
  }

  rpc GetBusinessValues (GetBusinessValuesRequest) returns (GetBusinessValuesReply) {
    option (google.api.http) = {
      get: "/configure/v1/business/values"
    };
  }


  rpc UpdateBusinessValues (UpdateBusinessValueRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/configure/v1/business/values",
      body:"*"
    };
  }
}